log/microscope_log_190620_120123.txt
2019-06-20T12:01:24|CRITICAL|root|Unhandled exception:Traceback (most recent call last):
  File "Microscope_app.py", line 43, in <module>
    app = MicroscopeApp(sys.argv)
  File "C:\Users\lindat18\AppData\Local\Continuum\miniconda3\envs\scopefoundry\lib\site-packages\ScopeFoundry\base_app.py", line 338, in __init__
    self.setup()
  File "Microscope_app.py", line 26, in setup
    from HW_PI_PiezoStage.OceanOptics_Scan import OceanOptics_Scan
  File "C:\Users\lindat18\Dropbox\Ginger_Lab\Microscope_App\HW_PI_PiezoStage\OceanOptics_Scan.py", line 20
    def run(self):
                 ^
IndentationError: unindent does not match any outer indentation level

